MDEV-17408 VIEW is incorrectly defined for a combination of = and BETWEEN

Also:
* WHEN/THEN/ELSE in CASE are not operators, don't need precedence checks
* 1 LIKE 2 BETWEEN 3 AND 4 was a syntax error