sql/sql_yacc.yy
@@ -1025,7 +1025,7 @@ bool my_yyoverflow(short **a, YYSTYPE **b, ulong *yystacksize);
   Currently there are 102 shift/reduce conflicts.
   We should not introduce new conflicts any more.
 */
-%expect 101
+%expect 97
 
 /*
    Comments for TOKENS.
@@ -9057,14 +9057,14 @@ predicate:
             if ($$ == NULL)
               MYSQL_YYABORT;
           }
-        | bit_expr LIKE simple_expr opt_escape
+        | bit_expr LIKE predicate opt_escape
           {
             $$= new (thd->mem_root) Item_func_like(thd, $1, $3, $4,
                                                    Lex->escape_used);
             if ($$ == NULL)
               MYSQL_YYABORT;
           }
-        | bit_expr not LIKE simple_expr opt_escape
+        | bit_expr not LIKE predicate opt_escape
           {
             Item *item= new (thd->mem_root) Item_func_like(thd, $1, $4, $5,
                                                              Lex->escape_used);
